Remove Archetype and Hero Path questions, and add Reset Dice Pool

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
             <div>
                 <button onClick="actionRoll()">Action Roll!</button>
                 <button onClick="forcedRoll()">Forced Roll!</button>
+                <button onClick="resetDicePool()">Reset Dice Pool</button>
             </div>
           </div>
         </div>
